add more to css and index.html

--- a/index.html
+++ b/index.html
@@ -3,11 +3,42 @@
 <html>
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="UTF-8">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@300;400;500;600;700&family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800&display=swap" rel="stylesheet">
     <link href="./resources/css/reset.css" rel="stylesheet" type="text/css">
     <link href="./resources/css/style.css" rel="stylesheet" type="text/css">
+    <script type="text/javascript" src="./resources/javascript/FindYourHat.js" async></script>
     <title>LRLT Find Your Hat Game</title>
   </head>
+
+  <body>
+    <header>
+        <h1>Welcome to my version of the Find Your Hat Game!</h1>
+    </header>
+    <main>
+        <section id="instructions">
+            <h2>Instructions</h2>
+            <ul>
+                <li>Icons
+                    <ul>
+                        <li>Player: <span class="code">*</span></li>
+                        <li>Hat: <span class="code">^</span></li>
+                        <li>Hole: <span class="code">O</span></li>
+                        <li>Field: <span class="code">░</span></li>
+                    </ul>
+                </li>
+                <li>The goal is to move the Player character through the field spaces and reach the Hat without falling in any holes or going out of bounds.</li>
+                <li id="warning">Warning: I can not yet guarantee that every game can be won. That code is still in development</li>
+            </ul>
+        </section>
+        <section id="controls">
+            
+        </section>
+    </main>
+    <footer>
+
+    </footer>
+  </body>
 </html>
